--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    /* outline: 1px red solid !important; visibility: visible !important; */
 }
 
 /* Common Styling */
@@ -26,6 +27,8 @@ nav.navbar {
     position: sticky;
     top: 0;
     left: 0;
+    right: 0;
+    bottom: 0;
     z-index: 99;
 }
 
@@ -109,7 +112,7 @@ small {
 
 div.search-container {
     float: right;
-    width: 270px;
+    width: 20%;
     height: 100%;
     display: flex;
     align-items: center;
@@ -212,7 +215,7 @@ div.menu-container ul.menu-bar {
         position: absolute;
         left: 0;
         top: 0;
-        margin-left: -400px;
+        margin-left: -50%;
         transition: all 0.3s ease;
     }
 
@@ -243,7 +246,7 @@ div.menu-container ul.menu-bar {
         position: absolute;
         left: 0;
         top: 0;
-        margin-left: -300px;
+        margin-left: -40%;
         transition: all 0.3s ease;
     }
 
@@ -372,7 +375,7 @@ div.bannar-title-section div.btn button:hover {
         top: 50%;
         left: 50%;
         transform: translate(-50%,-50%);
-        width: 400px;
+        width: 50%;
     }
 
     div.bannar-title {
@@ -405,7 +408,7 @@ div.bannar-title-section div.btn button:hover {
         top: 50%;
         left: 50%;
         transform: translate(-50%,-50%);
-        width: 400px;
+        width: 70%;
     }
 
     div.bannar-title {
