--- a/css/style.css
+++ b/css/style.css
@@ -374,8 +374,9 @@ div.bannar-title-section div.btn button:hover {
     div.bannar-title-section {
         top: 50%;
         left: 50%;
-        transform: translate(-50%,-50%);
-        width: 90%;
+        transform: translate(-50%,50%);
+        margin: 0;
+        width: 80%;
         border: 1px solid red;
     }
 
@@ -408,8 +409,9 @@ div.bannar-title-section div.btn button:hover {
     div.bannar-title-section {
         top: 50%;
         left: 50%;
-        transform: translate(-50%,-50%);
-        width: 90%;
+        transform: translate(-50%,50%);
+        margin: 0;
+        width: 80%;
         border: 1px solid red;
     }
 
