--- a/css/style.css
+++ b/css/style.css
@@ -408,10 +408,11 @@ div.bannar-title-section div.btn button:hover {
         transform: translate(-50%,-50%);
         justify-content: space-around;
         width: 80%;
+        height: 30%;
     }
 
     div.bannar-title {
-        line-height: 1.8;
+        line-height: 2.5;
     }
 
     div.bannar-title h2 {
@@ -424,7 +425,7 @@ div.bannar-title-section div.btn button:hover {
     }
 
     div.bannar-title-section div.btn button {
-        width: 128px;
+        width: 140px;
         height: 35px;
         font-size: 14px;
         letter-spacing: 1px;
@@ -442,10 +443,11 @@ div.bannar-title-section div.btn button:hover {
         transform: translate(-50%,-50%);
         justify-content: space-around;
         width: 80%;
+        height: 25%;
     }
 
     div.bannar-title {
-        line-height: 1.8;
+        line-height: 2.5;
     }
 
     div.bannar-title h2 {
