--- a/css/style.css
+++ b/css/style.css
@@ -364,7 +364,7 @@ div.bannar-title h2 {
     animation: glow 2s ease-in-out infinite alternate;
 }
 
-/* @keyframes glow {
+@keyframes glow {
     from {
         color: #fff;
         text-shadow: 0 0 5px #00fff2, 0 0 10px #00fff2, 0 0 15px #00fff2, 0 0 20px #00fff2, 0 0 25px #00fff2, 0 0 30px #00fff2, 0 0 35px #00fff2, 0 0 40px #00fff2;
@@ -374,7 +374,7 @@ div.bannar-title h2 {
         color: gray;
         text-shadow: 0 0 10px #00fff2, 0 0 20px #00fff2, 0 0 30px #00fff2, 0 0 40px #00fff2, 0 0 50px #00fff2, 0 0 60px #00fff2, 0 0 70px #00fff2, 0 1 80px #00fff2;
     }
-} */
+}
 
 div.bannar-title h2 span {
     display: inline-block;
