--- a/css/style.css
+++ b/css/style.css
@@ -728,6 +728,7 @@ div.contact-section div.contact-container div.contact-form button {
     width: 100%;
     height: 35px;
     border: none;
+    background-color: teal;
 }
 
 div.contact-section div.contact-container div.contact-address {
