--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
 
 html {
     scroll-behavior: smooth;
+    scroll-padding-top: 15vh;
 }
 
 /* Common Styling */
@@ -503,14 +504,14 @@ div.para-container {
     background-color: teal;
 }
 
-div.para-container::before { 
+/* div.para-container::before { 
     display: block; 
     content: " "; 
     margin-top: -95px; 
     height: 95px; 
     visibility: hidden; 
     pointer-events: none;
-  }
+  } */
 
 div.para-container div.para-rack {
     width: 69%;
@@ -582,14 +583,14 @@ div.account {
     padding-top: 0;
 }
 
-div.account::before { 
+/* div.account::before { 
     display: block; 
     content: " "; 
     margin-top: 50px; 
     height: 50px; 
     visibility: hidden; 
     pointer-events: none;
-  }
+  } */
 
 div.account h2 {
     margin-bottom: 20px;
